discussion/kv_engine/187844/187844_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test

Change-Id: I0ee25e0c265032178356c87a62e9d41ee9e47455

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-07 16:35:50.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-07 16:49:54.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22875/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22875/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22875/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43891/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43891/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52327/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52327/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24511/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24511/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1676/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1676/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12607/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12607/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12687/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12687/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24938/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24938/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25396/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25396/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26249/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26249/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33354/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33354/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23104/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-03-07 17:30:54.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
